<resources>
    <string name="app_name">LearnAndroid</string>
    <string name="click_me">Click me!</string>
    <string name="dodo">D O D O</string>
    <string name="start">start</string>
    <string name="add_a_dodo">Add a dodo</string>
    <string name="edit_a_dodo">Edit a dodo</string>
    <string name="delete_a_dodo">Delete a dodo</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="home">home</string>
    <string name="dodo_list_select">Pick a dodo:</string>
    <string name="add_hintMass">ex: 10.0 for 10.0 kg</string>
    <string name="add_txtSubmit">CREATE</string>
    <string name="edit_txtSubmit">EDIT</string>
    <string name="add_hintDetails">Ex: I love cheeseburgers.</string>
    <string name="details_optional">Details (optional)</string>
    <string name="add_hintName">Ex: John Dodo</string>
    <string name="name_of_dodo">Name of dodo</string>
    <string name="mass_kg">Mass [kg]</string>
    <string name="about">About this app</string>
    <string name="huntInput_txt1">How far is your cute dodo to its cave? [m]</string>
    <string name="huntInput_txt2">How far is your hungry sailor from the cave? [m]</string>
    <string name="huntInput_txt3">How healthy is your sailor, on a scale from 1 to 10?</string>
    <string name="huntInput_txtfill3">1 (almost dead), 5 (average citizen), 10 (Marvel superhero)</string>
    <string name="huntInput_txtfill2">10 for 10 metres</string>
    <string name="huntInput_txtfill1">7 for 7 metres</string>
    <string name="learn_more">Learn about Dodos!</string>
    <string name="learn_strQuote">\"Amongst these birds were those which in India they call Dod-aersen (being a kind of very big goose); these birds are unable to fly, and instead of wings, they merely have a few small pins, yet they can run very swiftly.\"</string>
    <string name="learn_strQuoteCite">- 18th century manuscript (Cheke 2004)</string>
    <string name="about_strQuote">\"Striding bipedal locomotion has evolved independently in two vertebrate lineages, archosaurs and primates, and is represented today by humans and birds.\"</string>
    <string name="about_strQuoteCite">- Gatesy 2009</string>
    <string name="intro">Intro</string>
    <string name="learn_strIntro">Contrary to popular belief, dodos were not clumsy creatures. Rather, the flightless birds were adept at transversing their rocky, dense Mauritius island. Historical accounts from sailors claimed that dodos \"can run very swiftly\" (Cheke 2004). What factors contribute to this surprising speed?</string>
    <string name="degree_of_crouch">Degree of Crouch</string>
    <string name="learn_strDeg">While humans stand up straight, dodos (and other birds) do not. In fact, the dodo\'s femur is \"relatively horizontal\" in position (Claessens). Imagine a sprinter just before a race begins; their stance is already at a crouch, ready to transition into a sprint.\n\n\t\tSmaller birds tend to have higher degrees of crouch, \"allowing them to maintain ground contact with the feet for longer durations (which increases stability), allowing them to make longer relative strides, and allowing them to transition to an aerial run at faster relative speeds\" (Bishop et al.).</string>
    <string name="balance">Balance</string>
    <string name="learn_strBalance">If you\'ve seen a picture of a dodo, you\'ve probably noticed its stubby wings. Although flightless, dodo wings had \"well-developed muscle insertions\" and \"were not entirely vestigial\"; instead, they were probably used for balance and/or display, similarly to extant (living) columbids (Claessens).\n\n\t\tBut if the dodo is similar to flying extant columbids, you ask, why can\'t it fly? The simple answer is that it probably did not need to. Until Mauritius was discovered, the dodo was thriving on the rocky and vegetation-dense island, and its shortened wing meant that upon extending its elbow for balance, the wing would not drag on the ground (Claessens).</string>
    <string name="strength">Leg Strength</string>
    <string name="learn_strStrength">Dodos enjoyed \"strong, robust hind limbs\" to offset its increased body weight. These limbs also served to improve agility on the island of Mauritius, which supposedly had some open \"palm savanna\" but was otherwise covered by forest (Cheke 2010, Claessens).</string>
    <string name="conclusions">Conclusion</string>
    <string name="learn_strConc"> The dodo is a fascinating creature of study. External characteristics like its stubby wings and round body not only make it endearing in media, but actually help contribute to a body well-suited to flightless living. Meanwhile, internal characteristics like leg composition and stance also do their part, providing an ongoing source of research and discovery.\n</string>
    <string name="results_titleCongrats">Congrats!</string>
    <string name="results_messageCongrats">Your cute dodo is safe in its cave. Whew!</string>
    <string name="results_strScienceSurvived">Contrary to popular belief, dodos are surprisingly agile creatures. As flightless birds, they are well suited to ground running and boast high speeds for their size. But why?</string>
    <string name="results_strScienceDied">Although the dodo lost this time, dodos are actually quite agile. As flightless birds, they are well suited to ground running and boast high speeds for their size. But why?</string>
    <string name="references">References</string>
    <string name="learn_strRef">
        Images: All icons drawn by app maker. The following were based on existing images: ic_beak (Wikimedia Commons/William Clift), ic_rhea (Wikimedia Commons/Quartl) and ic_wing (Encyclopædia Britannica, Inc./Christine McCabe).\n\n
        Abourachid, Anick &amp; Renous, Sabine. \"Bipedal locomotion in ratites (Paleognatiform): examples of cursorial birds.\" British Ornithologists\' Union, Ibis, vol. 142, 2000, pp. 538-549. doi:10.1111/j.1474-919X.2000.tb04455.x.\n\n\t\t
        Bishop, P J et al. \“The influence of speed and size on avian terrestrial locomotor biomechanics: Predicting locomotion in extinct theropod dinosaurs.\” PloS one vol. 13,2 e0192172. 21 Feb. 2018, doi:10.1371/journal.pone.0192172.\n\n\t\t
        Blanco, R., Gambini, Rodolfo &amp; Fariña, Richard. \"Mechanical model for theoretical determination of maximum running speed in mammals.\" Journal of theoretical biology vol 222. 1, Jun. 2003, doi:10.1016/S0022-5193(03)00019-5.\n\n\t\t
        Blanco, R. E. &amp; Jones, Washington W. \"Terror birds on the run: A mechanical model to estimate its maximum running speed.\" Proceedings. Biological sciences / The Royal Society vol. 272. 1 Oct. 2005, doi:10.1098/rspb.2005.3133.\n\n\t\t
        Cheke, Anthony &amp; Hume, Julian P. \"Lost Land of the Dodo: The Ecological History of Mauritius, Réunion and Rodrigues.\" Bloomsbury Publishing, 2020, pp. 32-39.\n\n\t\t
        Cheke, Anthony. \"The Dodo\'s last island - where did Volkert Evertsz meet the last wild Dodos?\" Proceedings. The Royal Society vol. 7, 2004. http://dodobooks.com/wp-content/uploads/2012/01/Cheke-2004-DodosLastIsland.pdf. Accessed 31 Dec. 2020.\n\n\t\t
        Claessens, Leon P.A.M., et al. \“The Morphology of the Thirioux Dodos.\” Memoir (Society of Vertebrate Paleontology), vol. 15, 2015, pp. 29–187. JSTOR, www.jstor.org/stable/44512774. Accessed 31 Dec. 2020.\n\n\t\t
        Gatesy, Stephen &amp; Biewener, Andrew. \"Bipedal locomotion: effects of speed, size and limb posture in birds and humans.\" Journal of Zoology vol. 224. 23 Dec. 2009, doi:10.1111/j.1469-7998.1991.tb04794.x.\n\n\t\t
        Gatesy, Stephen M., &amp; Middleton, Kevin M. \“Bipedalism, Flight, and the Evolution of Theropod Locomotor Diversity.\” Journal of Vertebrate Paleontology, vol. 17, no. 2, 1997, pp. 308–329. JSTOR, www.jstor.org/stable/4523809. Accessed 31 Dec. 2020.\n\n\t\t
        van Heteren, Anneke H, et al. \"Neither slim nor fat: estimating the mass of the dodo (Raphus cucullatus, Aves, Columbiformes) based on the largest sample of dodo bones to date.\” PeerJ vol. 5 e4110. 5 Dec. 2017, doi:10.7717/peerj.4110.\n\n\t\t
        Winters, R., Hume, J. P. &amp; Leenstra, M. \"A famine in Surat in 1631 and Dodos on Mauritius: a long lost manuscript rediscovered.\" Archives of Natural History. 44 (1): 134–150, 2017. doi:10.3366/anh.2017.0422.
    </string>
    <string name="purpose">Purpose</string>
    <string name="about_strPurpose">The purpose of the app is for the maker to learn Java, IntelliJ and Android Studio, and to explore the differences in bipedal locomotion in the dodo bird and the human male adult.</string>
    <string name="the_hunt">The Hunt</string>
    <string name="about_strHunt">In this app, the user picks a dodo with particular mass, inputs distances, and picks sailor health. Dodo and sailor speeds are calculated from mass and health respectively. A simple linear-pathed hunt ensues, and whoever reaches the dodo\'s cave first survives.</string>
    <string name="the_math">The Math</string>
    <string name="about_strMath">
        <![CDATA[All calculations are based on Blanco\'s research into determining the maximum running speed of mammals and large birds (2003, 2005). \n\n\t\tHuman max speed (11 m/s) was observed from Blanco (2003) and adjusted based on a simplified range of health.
    \n\n\t\tDodo speed was calculated by combining two of Blanco\'s formulas: Formula A takes mass and various other inputs to produce limb effective length variation, while Formula B takes various inputs to produce velocity.
    \n\n\t\tAs you can tell, I needed to find: 1) the exact values of the \"various inputs\" for each formula, and 2) some sort of mathematical relationship between Formula A\'s limb effective length variation and Formula B\'s velocity in order to connect mass to velocity.
    \n\n\t\tFor all but one of the \"various inputs\", I borrowed Blanco\'s values (I will not go over them here). The missing input was duty factor. I ended up borrowing the kiwi bird\'s duty factor. My reasoning was that dodo hind leg proportion (Claessens 2015) is similar to the kiwi\'s (Gatesy 1997), and that \"Two animals making dynamically similar movements would have equal relative stride lengths and equal duty factors\" (Alexander, 2004).
    \n\n\t\tFor 2), I played with many ideas and saw if any stuck. I finally decided to take the mass and velocity of a bird in Blanco\'s study, and work my way back to figure out if there was any simple mathematical relationship between Formulas A and B. Unfortunately, Blanco did not apply his method to the kiwi bird. Fortunately, the kiwi has a similar duty factor to Rhea americana, which Blanco did study (Abourachid & Renous 2000). So I used Blanco\'s 2005 rhea results, found a rough linear relationship, and applied my findings to the dodo.]]></string>
    <string name="discussion_amp_conclusions"><![CDATA[Discussion & Conclusions]]></string>
    <string name="about_strDiscussion">Despite being much shorter than the typical human male, the dodo boasts impressive max speeds. Firsthand accounts from sailors even called them swift (Cheke).
        \n\n\t\tThis is actually expected; for their size, birds already tend to be faster than humans due partly to their greater degree of crouch.\n\n\t\tThe dodo may have been well adapted to being flightless, although it did eventually go extinct from a debated combination of sailor hunters and invasive species predators.</string>
    <string name="limitations">Limitations</string>
    <string name="endSpace">\n\n\n\n\n\n\n\n\n\n\n\n</string>
</resources>