<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLearn"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/customToolbarColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLearn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/learn_txtQuote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/learn_strQuote"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/learn_txtQuoteCite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/learn_strQuoteCite"
                android:textSize="18sp"
                android:gravity="end" />

            <TextView
                android:id="@+id/learn_txtIntroTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/intro"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/learn_txtIntroBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/learn_strIntro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/learn_txtDegTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/degree_of_crouch"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/learn_txtDegBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/learn_strDeg"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/learn_txtStrengthTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/strength"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/learn_txtStrengthBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/learn_strStrength"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/learn_txtBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/balance"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/learn_txtBalanceBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/learn_strBalance"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/learn_txtConcTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/conclusions"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/learn_txtConcBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/learn_strConc"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endSpace" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>