<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarInput"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="#009688"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_of_dodo"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInput" />

    <EditText
        android:id="@+id/input_txtfill1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/input_txt1"
        app:layout_constraintTop_toBottomOf="@+id/input_txt1" />

    <TextView
        android:id="@+id/input_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mass_kg"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/input_txt1"
        app:layout_constraintTop_toBottomOf="@+id/input_txtfill1" />

    <EditText
        android:id="@+id/input_txtfill2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/input_txtfill1"
        app:layout_constraintStart_toStartOf="@+id/input_txt1"
        app:layout_constraintTop_toBottomOf="@+id/input_txt2" />

    <TextView
        android:id="@+id/input_txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/details_optional"
        app:layout_constraintStart_toStartOf="@+id/input_txt1"
        app:layout_constraintTop_toBottomOf="@+id/input_txtfill2" />

    <EditText
        android:id="@+id/input_txtfill3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/input_txtfill1"
        app:layout_constraintStart_toStartOf="@+id/input_txt1"
        app:layout_constraintTop_toBottomOf="@+id/input_txt3" />

    <Button
        android:id="@+id/input_btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/input_txtfill3"
        app:layout_constraintStart_toStartOf="@+id/input_txtfill3"
        app:layout_constraintTop_toBottomOf="@+id/input_txtfill3" />

</androidx.constraintlayout.widget.ConstraintLayout>